tests/invalid/multimode_dcg.err_exp
multimode_dcg.m:031: In the head of a clause for
multimode_dcg.m:031:   predicate `multimode_dcg.test1'/3:
multimode_dcg.m:031:   syntax error: some but not all arguments have mode
multimode_dcg.m:031:   annotations.
multimode_dcg.m:033: In the head of a clause for
multimode_dcg.m:033:   predicate `multimode_dcg.test1'/3:
multimode_dcg.m:033:   syntax error: some but not all arguments have mode
multimode_dcg.m:033:   annotations.
multimode_dcg.m:033: In clause for `test1(out, di, uo)':
multimode_dcg.m:033:   mode mismatch in disjunction.
multimode_dcg.m:033:   The variable `HeadVar__1' has these instantiation
multimode_dcg.m:033:   states:
multimode_dcg.m:033:     line 31:
multimode_dcg.m:033:       free
multimode_dcg.m:033:     line 33:
multimode_dcg.m:033:       unique(0)
multimode_dcg.m:041: In the head of a clause for
multimode_dcg.m:041:   predicate `multimode_dcg.test2'/4:
multimode_dcg.m:041:   syntax error: some but not all arguments have mode
multimode_dcg.m:041:   annotations.
multimode_dcg.m:043: In the head of a clause for
multimode_dcg.m:043:   predicate `multimode_dcg.test2'/4:
multimode_dcg.m:043:   syntax error: some but not all arguments have mode
multimode_dcg.m:043:   annotations.
multimode_dcg.m:045: In the head of a clause for
multimode_dcg.m:045:   predicate `multimode_dcg.test2'/4:
multimode_dcg.m:045:   syntax error: some but not all arguments have mode
multimode_dcg.m:045:   annotations.
multimode_dcg.m:047: In the head of a clause for
multimode_dcg.m:047:   predicate `multimode_dcg.test2'/4:
multimode_dcg.m:047:   syntax error: some but not all arguments have mode
multimode_dcg.m:047:   annotations.
multimode_dcg.m:047: In clause for `test2(in, out, di, uo)':
multimode_dcg.m:047:   mode mismatch in disjunction.
multimode_dcg.m:047:   The variable `HeadVar__2' has these instantiation
multimode_dcg.m:047:   states:
multimode_dcg.m:047:     line 41:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 43:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047:     line 45:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 47:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047: In clause for `test2(out, in, di, uo)':
multimode_dcg.m:047:   mode mismatch in disjunction.
multimode_dcg.m:047:   The variable `HeadVar__1' has these instantiation
multimode_dcg.m:047:   states:
multimode_dcg.m:047:     line 41:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 43:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 45:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047:     line 47:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047: In clause for `test2(out, out, di, uo)':
multimode_dcg.m:047:   mode mismatch in disjunction.
multimode_dcg.m:047:   The variable `HeadVar__1' has these instantiation
multimode_dcg.m:047:   states:
multimode_dcg.m:047:     line 41:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 43:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 45:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047:     line 47:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047:   The variable `HeadVar__2' has these instantiation
multimode_dcg.m:047:   states:
multimode_dcg.m:047:     line 41:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 43:
multimode_dcg.m:047:       unique(0)
multimode_dcg.m:047:     line 45:
multimode_dcg.m:047:       free
multimode_dcg.m:047:     line 47:
multimode_dcg.m:047:       unique(0)
